--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /*page descrption*/
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color:violet;
     margin: 0;
     padding: 0;
     align-items: center;
@@ -69,7 +69,7 @@ img {
 }
 /*footer styling*/
 footer {
-    background-color: #333;
+    background-color: #e6e6fa;
     color: white;
     text-align: center;
     padding: 10px;
@@ -94,4 +94,7 @@ footer {
   .fab.fa-twitter:hover {
     transform: scale(1.2);
     color: #0d8ddb;
+  }
+  .contact {
+    color:green;
   }
